NetBSD Problem Report #43965

From www@NetBSD.org  Wed Oct 13 08:49:03 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 865AE63B900
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 13 Oct 2010 08:49:03 +0000 (UTC)
Message-Id: <20101013084902.E1CA863B8FF@www.NetBSD.org>
Date: Wed, 13 Oct 2010 08:49:02 +0000 (UTC)
From: Francois.Laissus@sio.ecp.fr
Reply-To: Francois.Laissus@sio.ecp.fr
To: gnats-bugs@NetBSD.org
Subject: routed crash on ultra 5/NetBSD 5.0.2/sparc64
X-Send-Pr-Version: www-1.0

>Number:         43965
>Category:       port-sparc64
>Synopsis:       routed crash on ultra 5/NetBSD 5.0.2/sparc64
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-sparc64-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Oct 13 08:50:04 +0000 2010
>Closed-Date:    Mon Nov 22 04:48:46 +0000 2010
>Last-Modified:  Mon Nov 22 04:48:46 +0000 2010
>Originator:     François Laissus
>Release:        5.0.2
>Organization:
Mastère SIO (ecp)
>Environment:
NetBSD  5.0.2 NetBSD 5.0.2 (GENERIC) #0: Sat Feb  6 22:11:13 UTC 2010  builds@b7.netbsd.org:/home/builds/ab/netbsd-5-0-2-RELEASE/sparc64/201002061851Z-obj/home/builds/ab/netbsd-5-0-2-RELEASE/src/sys/arch/sparc64/compile/GENERIC sparc64

>Description:
Daemon routed crashes at lauching time, for instance :


# /sbin/routed -d -t 
-- 10:43:37 --
Tracing actions started
Add interface hme0 192.168.9.207  -->192.168.9.0/24  
RCVBUF=61440
turn on RIP
[1]   Bus error (core dumped) /sbin/routed -d -t

>How-To-Repeat:
Just do as above.
>Fix:

>Release-Note:

>Audit-Trail:
From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: port-sparc64/43965: routed crash on ultra 5/NetBSD 5.0.2/sparc64
Date: Wed, 13 Oct 2010 11:11:40 +0200

 Still reproducable under -current:

 Program received signal SIGBUS, Bus error.
 0x0000000000103c24 in ifinit () at if.c:765
 765                             ifs0.int_data.ipackets = ifm->ifm_data.ifi_ipackets;
 (gdb) bt
 #0  0x0000000000103c24 in ifinit () at if.c:765
 #1  0x0000000000109988 in main (argc=0, argv=0xffffffffffffbae0) at main.c:349
 (gdb) list
 760                             ifs0.int_if_flags = ifm->ifm_flags;
 761                             ifs0.int_state = IS_CHECKED;
 762                             ifs0.int_query_time = NEVER;
 763                             ifs0.int_act_time = now.tv_sec;
 764                             ifs0.int_data.ts = now.tv_sec;
 765                             ifs0.int_data.ipackets = ifm->ifm_data.ifi_ipackets;
 766                             ifs0.int_data.ierrors = ifm->ifm_data.ifi_ierrors;
 767                             ifs0.int_data.opackets = ifm->ifm_data.ifi_opackets;
 768                             ifs0.int_data.oerrors = ifm->ifm_data.ifi_oerrors;
 769     #ifdef sgi
 (gdb) print &ifm->ifm_data.ifi_ipackets
 $7 = (__uint64_t *) 0x40a0491c

 "ooops"

 Martin

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43965 CVS commit: src/sbin/routed
Date: Wed, 13 Oct 2010 09:19:41 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Wed Oct 13 09:19:40 UTC 2010

 Modified Files:
 	src/sbin/routed: if.c

 Log Message:
 Memcpy into local variable to ensure proper alignement.
 Fixes PR port-sparc64/43965.


 To generate a diff of this commit:
 cvs rdiff -u -r1.28 -r1.29 src/sbin/routed/if.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: martin@NetBSD.org
State-Changed-When: Wed, 13 Oct 2010 09:24:00 +0000
State-Changed-Why:
Fixed in -current, pullup-5 #1460


From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43965 CVS commit: [netbsd-5] src/sbin/routed
Date: Sun, 21 Nov 2010 21:30:21 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Sun Nov 21 21:30:21 UTC 2010

 Modified Files:
 	src/sbin/routed [netbsd-5]: if.c

 Log Message:
 Pull up following revision(s) (requested by martin in ticket #1460):
 	sbin/routed/if.c: revision 1.29
 Memcpy into local variable to ensure proper alignement.
 Fixes PR port-sparc64/43965.


 To generate a diff of this commit:
 cvs rdiff -u -r1.26 -r1.26.16.1 src/sbin/routed/if.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 22 Nov 2010 04:48:46 +0000
State-Changed-Why:
pullups completed!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.