Memcpy into local variable to ensure proper alignement. Fixes PR port-sparc64/43965.